metainfo for tracks added + info for track updated
